--- a/src/Busybee/SystemBundle/Resources/config/menu/parameters.yml
+++ b/src/Busybee/SystemBundle/Resources/config/menu/parameters.yml
@@ -34,14 +34,14 @@ parameters:
         191:
             name: Register User
             label: menu.site.security.register
-            grant: ROLE_REGISTRAR
+            role: ROLE_REGISTRAR
             route: security_user_register
             node: 19
             order: 101
         192:
             name: Current User
             label: menu.site.security.user
-            grant: ROLE_REGISTRAR
+            role: ROLE_REGISTRAR
             route: security_user_list
             node: 19
             order: 102
