--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -71,6 +71,7 @@ Busybee\PersonBundle\Entity\Person:
         address1:
             targetEntity: Busybee\PersonBundle\Entity\Address
             nullable: true
+            cascade: [ 'persist' ]
             joinColumns:
                 address1:
                     referencedColumnName: id
