Person Phone Not Working TWIG
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/services.yml
+++ b/src/Busybee/PersonBundle/Resources/config/services.yml
@@ -235,3 +235,9 @@ services:
             - '@setting.manager'
         tags:
             - { name: form.type }
+    person.email.validator:
+        class: Busybee\PersonBundle\Validator\Constraints\PersonEmailValidator
+        arguments:
+            entityManager: "@doctrine.orm.entity_manager"
+        tags:
+            - { name: validator.constraint_validator, alias: person_email_validator }
