--- a/src/Busybee/PersonBundle/Resources/config/services.yml
+++ b/src/Busybee/PersonBundle/Resources/config/services.yml
@@ -249,3 +249,9 @@ services:
             - '@translator'
             - '@setting.manager'
             - '@phone.repository'
+    person.name.validator:
+        class: Busybee\PersonBundle\Validator\Constraints\PersonNameValidator
+        arguments:
+            entityManager: "@doctrine.orm.entity_manager"
+        tags:
+            - { name: validator.constraint_validator, alias: person_name_validator }
