--- a/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
+++ b/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
@@ -1,4 +1,6 @@
 Busybee\PersonBundle\Entity\Person:
+    constraints:
+        - Busybee\PersonBundle\Validator\PersonName: ~
     properties:
         email:
             - Email:
