--- a/src/Busybee/SystemBundle/Resources/Defaults/Australia.yml
+++ b/src/Busybee/SystemBundle/Resources/Defaults/Australia.yml
@@ -6,7 +6,7 @@ settings:
         {% endif %}{% if buildingType is not empty %}{{ buildingType }} {% endif %}{% if buildingNumber is not empty %}{{ buildingNumber}}/{% endif %}{% if streetNumber is not empty %}{{ streetNumber}} {% endif %}{{ streetName }}
         {{ locality }} {{ territory }} {{ postCode }}
         {{ country }}</pre>
-    Address.ListLabel: "{% if buildingType is not empty %}{{ buildingType }} {% endif %}{% if buildingNumber is not empty %}{{ buildingNumber}}/{% endif %}{% if streetNumber is not empty %}{{ streetNumber}} {% endif %}{{ streetName }}"
+    Address.ListLabel: "{% if buildingType is not empty %}{{ buildingType }} {% endif %}{% if buildingNumber is not empty %}{{ buildingNumber}}/{% endif %}{% if streetNumber is not empty %}{{ streetNumber}} {% endif %}{{ streetName }} {{ locality }}"
     Person.GenderList:
         'Unspecified': 'U'
         'Male': 'M'
@@ -34,8 +34,9 @@ settings:
         'Home': 'Home'
         'Mobile': 'Mobile'
         'Work': 'Work'
+        'Imported': 'Imported'
     Phone.CountryList:
-        'Australia +61': 61'
+        'Australia +61': '+61'
     Phone.Validation: "/(^(1300|1800|1900|1902)[0-9]{6}$)|(^0[2|3|4|7|8]{1}[0-9]{8}$)|(^13[0-9]{4}$)/"
     Phone.Display: |
         {% set start = phone|slice(0,2) %}
@@ -48,4 +49,5 @@ settings:
         {{ phone|slice(0,2)}} {{ phone|slice(2)}}
         {% else %}
         {{ phone }}
-        {% endif %}    
+        {% endif %}
+    Country.Code: '+61'
