Setting choice Type added
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -36,7 +36,7 @@ services:
             - '%timezone%'
         tags: 
             - { name: form.type }
-    validator.setting.constraint:
+    validator.setting.choice.constraint:
         class: Busybee\FormBundle\Validator\Constraints\SettingChoiceValidator
         arguments:
             - '@setting.manager'
@@ -54,5 +54,11 @@ services:
         class: Busybee\FormBundle\Type\CSVType
         arguments:
             - '@file.uploader'
+        tags:
+            - { name: form.type }
+    form.type.setting:
+        class: Busybee\FormBundle\Type\SettingChoiceType
+        arguments:
+            - '@setting.manager'
         tags:
             - { name: form.type }
