--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Student.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Student.orm.yml
@@ -13,6 +13,12 @@ Busybee\PersonBundle\Entity\Student:
             type: date
         startAtThisSchool:
             type: date
+        lastAtThisSchool:
+            type: date
+            nullable: true
+        status:
+            type: string
+            length: '32'
         lastModified:
             type: datetime
         createdOn:
