--- a/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
+++ b/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
@@ -41,3 +41,7 @@ Busybee\PersonBundle\Entity\Person:
             - Valid: ~
         user:
             - Valid: ~
+        student:
+            - Valid: ~
+        staff:
+            - Valid: ~
