Family Details Build
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -115,3 +115,7 @@ Busybee\PersonBundle\Entity\Person:
             cascade: [all]
             mappedBy: person
             nullable: true
+    oneToMany:
+        careGiver:
+            targetEntity: Busybee\FamilyBundle\Entity\CareGiver
+            mappedBy: person
