--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -30,6 +30,11 @@ busybee_student:
     resource: "@BusybeeStudentBundle/Resources/config/routing.yml"
     prefix:   /student/
 
+busybee_family:
+    resource: "@BusybeeFamilyBundle/Resources/config/routing.yml"
+    prefix:   /family/
+
+
 busybee_plugin:
     resource: .
     type: advanced_extra
