--- a/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
@@ -20,6 +20,7 @@ Busybee\FamilyBundle\Entity\Family:
         careGiver:
             targetEntity: Busybee\FamilyBundle\Entity\CareGiver
             mappedBy: family
+            cascade: [ 'all' ]
             joinColumn:
                 name: caregiver
                 referencedColumnName: id
