--- a/src/Busybee/FamilyBundle/Resources/config/validation/CareGiver.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/validation/CareGiver.yml
@@ -4,3 +4,6 @@ Busybee\FamilyBundle\Entity\CareGiver:
             fields: [family, person]
             errorPath: family
             message: 'caregiver.unique.fail'
+    properties:
+        person:
+            - NotBlank: ~
