--- a/src/Busybee/FamilyBundle/Resources/config/validation/Family.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/validation/Family.yml
@@ -1,7 +1,4 @@
 Busybee\FamilyBundle\Entity\Family:
     properties:
-        careGiver1:
-            - Valid: ~
-            - NotBlank: ~
-        careGiver2:
+        careGiver:
             - Valid: ~
