--- a/src/Busybee/FamilyBundle/Resources/config/validation/CareGiver.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/validation/CareGiver.yml
@@ -2,7 +2,7 @@ Busybee\FamilyBundle\Entity\CareGiver:
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity:
             fields: [family, person]
-            errorPath: family
+            errorPath: person
             message: 'caregiver.unique.fail'
     properties:
         person:
