--- a/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
@@ -19,6 +19,7 @@ Busybee\FamilyBundle\Entity\Family:
     oneToMany:
         careGiver:
             targetEntity: Busybee\FamilyBundle\Entity\CareGiver
+            orderBy: { 'contactPriority': 'ASC' }
             mappedBy: family
             cascade: [ 'all' ]
             joinColumn:
@@ -38,6 +39,7 @@ Busybee\FamilyBundle\Entity\Family:
                         referencedColumnName: id
         students:
             targetEntity: Busybee\StudentBundle\Entity\Student
+            orderBy: { 'startAtSchool': 'ASC'}
             cascade: [ 'persist' ]
             joinTable:
                 name: family_student
