--- a/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
@@ -12,6 +12,14 @@ Busybee\FamilyBundle\Entity\Family:
         name:
             type: string
             length: '255'
+        firstLanguage:
+            type: string
+            length: 32
+            nullable: true
+        secondLanguage:
+            type: string
+            length: 32
+            nullable: true
         lastModified:
             type: datetime
         createdOn:
