--- a/src/Busybee/FamilyBundle/Resources/config/doctrine/CareGiver.orm.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/doctrine/CareGiver.orm.yml
@@ -32,6 +32,13 @@ Busybee\FamilyBundle\Entity\CareGiver:
         contactPriority:
             type: integer
             length: 2
+        vehicleRegistration:
+            type: string
+            length: '25'
+            nullable: true
+        relationship:
+            type: string
+            length: 32
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
