--- a/src/Busybee/StudentBundle/Resources/config/validation/Student.yml
+++ b/src/Busybee/StudentBundle/Resources/config/validation/Student.yml
@@ -11,3 +11,5 @@ Busybee\StudentBundle\Entity\Student:
         status:
             - Busybee\FormBundle\Validator\SettingChoice:
                 name: 'Student.Status.List'
+        citizenship1PassportScan:
+            - \Busybee\StudentBundle\Validator\PassportImage: ~
