Upload Button Added Flash can now handle parameters Ajax call resets fadeAlert Page Management Changes User Management Changes
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/config/services.yml
+++ b/src/Busybee/HomeBundle/Resources/config/services.yml
@@ -12,6 +12,12 @@ parameters:
             title: 'form.cancel'
             style: 'float: right;'
             additional: ''
+        upload:
+            class: "halflings halflings-cloud-upload btn btn-success"
+            type: submit
+            title: 'form.upload'
+            style: 'float: right;'
+            additional: ''
 services:
     menu.manager:
         class: Busybee\HomeBundle\Model\MenuManager
