Change Person Lists to Toggle
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/config/services.yml
+++ b/src/Busybee/HomeBundle/Resources/config/services.yml
@@ -18,6 +18,18 @@ parameters:
             title: 'form.upload'
             style: 'float: right;'
             additional: ''
+        add:
+            class: "halflings halflings-plus-sign btn btn-primary"
+            type: button
+            title: 'form.add'
+            style: 'float: right;'
+            additional: ''
+        edit:
+            class: "halflings halflings-plus-sign btn btn-primary"
+            type: button
+            title: 'form.add'
+            style: 'float: right;'
+            additional: ''
 services:
     menu.manager:
         class: Busybee\HomeBundle\Model\MenuManager
