--- a/src/Busybee/SystemBundle/Resources/Defaults/Australia.yml
+++ b/src/Busybee/SystemBundle/Resources/Defaults/Australia.yml
@@ -37,6 +37,9 @@ settings:
         'Imported': 'Imported'
     Phone.CountryList:
         'Australia +61': '+61'
+        'Canada +1': '+1'
+        'Hong Kong +852': '+852'
+        'USA +1': '+1'
     Phone.Validation: "/(^(1300|1800|1900|1902)[0-9]{6}$)|(^0[2|3|4|7|8]{1}[0-9]{8}$)|(^13[0-9]{4}$)/"
     Phone.Display: |
         {% set start = phone|slice(0,2) %}
@@ -51,3 +54,63 @@ settings:
         {{ phone }}
         {% endif %}
     Country.Code: '+61'
+    firstDayofWeek: Sunday
+    Person.Import:
+        PhoneType: Imported
+        CountryCode: AU    
+    Phone.Format: |
+        {% set start = phoneNumber|slice(0,2) %}
+        {% set len = phoneNumber|length %}
+        {% if start in [02,03,07,08,09] and countryCode == '+61' %}
+            <strong>{{ phoneType }}:</strong> ({{ phoneNumber|slice(0,2)}}) {{ phoneNumber|slice(2,4)}} {{ phoneNumber|slice(6,4)}}
+        {% elseif start in [18,13,04] and len == 10 and countryCode == '+61' %}
+            <strong>{{ phoneType }}:</strong> {{ phoneNumber|slice(0,4)}} {{ phoneNumber|slice(4,3)}} {{ phoneNumber|slice(7,3)}}
+        {% elseif start in [13] and len == 6 and countryCode == '+61' %}
+            <strong>{{ phoneType }}:</strong> {{ phoneNumber|slice(0,2)}} {{ phoneNumber|slice(2)}}
+        {% else %}
+            <strong>{{ phoneType }}:</strong> {{ countryCode }} {{ phoneNumber }}
+        {% endif %}
+    Ethnicity.List:
+        Inadequately described : '0'
+        Not stated : '1'
+        Eurasian: '901'
+        Asian: '902'
+        African, so decribed: '903'
+        European, so decribed: '904'
+        Caucasian, so decribed: '905'
+        Creole, so decribed: '906'
+        Oceanian: '1000'
+        Australian Peoples: '1100'
+        New Zealand Peoples: '1200'
+        Melanesian and Papuan: '1300'
+        Micronesian: '1400'
+        Polynesian: '1500'
+        North-West European: '2000'
+        British: '2100'
+        Western European: '2300'
+        Northern European: '2400'
+        Southern and  Eastern European: '3000'
+        Southern European: '3100'
+        South Eastern European: '3200'
+        Eastern European: '3300'
+        North African and Middle Eastern: '4000'
+        Arab: '4100'
+        Peoples of the Sudan: '4300'
+        Other North African and Middle Eastern: '4900'
+        South-East  Asian: '5000'
+        Mainland South-East Asian: '5100'
+        Maritime South-East Asian: '5200'
+        North-East Asian: '6000'
+        Chinese Asian: '6100'
+        Other North-East Asian: '6900'
+        Southern and Central Asian: '7000'
+        Southern Asian: '7100'
+        Central Asian: '7200'
+        Peoples of the Americas: '8000'
+        North American: '8100'
+        South American: '8200'
+        Central American: '8300'
+        Caribbean Islander: '8400'
+        Sub-Saharan African: '9000'
+        Central and West African: '9100'
+        Southern and East African: '9200'        
