--- a/src/Busybee/InstituteBundle/Resources/config/validation/SpecialDay.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/validation/SpecialDay.yml
@@ -4,3 +4,9 @@ Busybee\InstituteBundle\Entity\SpecialDay:
             fields: [day]
             errorPath: day
             message: 'Each date must be unique to the Special Day record.'
+    properties:
+        name:
+            - NotBlank: ~
+        year:
+            - NotBlank:
+                message: 'blank.specialday.year'
